--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-pip install --upgrade pip
 tensorflow==2.5.0
 fastapi
 uvicorn
@@ -6,4 +5,4 @@ python-multipart
 pillow
 tensorflow-serving-api==2.5.0
 matplotlib
-numpy
+numpy==1.19.5
